--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -13,13 +13,15 @@ jobs:
     - name: Build Docker image
       uses: docker/build-push-action@v1
       with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
         path: .
         dockerfile: docker/Dockerfile
         repository: agitter/singe
         tags: tmp
         cache_froms: agitter/singe:tmp
         add_git_labels: true
-        push: false
+        push: true # Temporarily push on all builds
     - name: Test SINGE
       run: |
         # Store the md5sums of the tracked source files before running tests in the Docker image
