--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -10,6 +10,11 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+      # Pull from Docker Hub to use the cache
+      # https://medium.com/mobileforgood/coding-tips-patterns-for-continuous-integration-with-docker-on-travis-ci-9cedb8348a62
+      # https://github.com/docker/build-push-action/issues/7
+    - name: Pull Docker image
+      run: docker pull agitter/singe:tmp
     - name: Build Docker image
       uses: docker/build-push-action@v1
       with:
