--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# No longer used, repalced by GitHub Actions
+# No longer used, replaced by GitHub Actions
 # Keep this workflow as a reference
 # It had the advantage of only pushing to Docker Hub if the test cases passed
 
