Update Dockerfile and macOS test to use v0.5.0

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ SCINGE_Example
 SINGE_Example
 SINGE_GLG_Test
 SINGE_Aggregate
+SINGE_mac.tgz
 tests/SINGE_Test
 mccExcludedFiles.log
 requiredMCRProducts.txt
