Update test script to take reference output directory as argument

--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -93,4 +93,4 @@ jobs:
       run: |
         bash SINGE.sh $MATLAB_RUNTIME_PATH standalone data1/X_SCODE_data.mat data1/gene_list.mat Output tests/example_hyperparameters.txt
         ls -l Output
-        bash tests/compare_example_output.sh Output 1e-02 1e-02
+        bash tests/compare_example_output.sh Output tests/reference/latest 1e-02 1e-02
