--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -61,13 +61,13 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-#    - name: Install conda environment
-#      uses: conda-incubator/setup-miniconda@v2
-#      with:
-#        activate-environment: singe-test
-#        environment-file: tests/environment.yml
-#        auto-activate-base: false
-#        miniconda-version: 'latest'
+    - name: Install conda environment
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        activate-environment: singe-test
+        environment-file: tests/environment.yml
+        auto-activate-base: false
+        miniconda-version: 'latest'
 #    - name: Cache MATLAB runtime installer
 #      id: cache-installer
 #      uses: actions/cache@v1
