--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -93,6 +93,7 @@ jobs:
       uses: matlab-actions/setup-matlab@v2
       with:
         release: R2023a
+        products: MATLAB_Compiler
     - name: Download SINGE
       run: |
         wget --quiet https://github.com/gitter-lab/SINGE/releases/download/$SINGE_VERSION/SINGE_mac.tgz
