--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -68,32 +68,13 @@ jobs:
         environment-file: tests/environment.yml
         auto-activate-base: false
         miniconda-version: 'latest'
-#    - name: Cache MATLAB runtime installer
-#      id: cache-installer
-#      uses: actions/cache@v1
-#      with:
-#        path: installer
-#        key: ${{ runner.os }}-matlab-R2020a-installer
-#    - name: Download MATLAB runtime installer
-#      if: steps.cache-installer.outputs.cache-hit != 'true'
-#      run: wget --quiet --directory-prefix=installer http://ssd.mathworks.com/supportfiles/downloads/R2020a/Release/2/deployment_files/installer/complete/maci64/MATLAB_Runtime_R2020a_Update_2_maci64.dmg.zip
-#    - name: Install MATLAB runtime
-#      run: |
-#        unzip -d . -q installer/MATLAB_Runtime_R2020a_Update_2_maci64.dmg.zip
-#        hdiutil mount MATLAB_Runtime_R2020a_Update_2_maci64.dmg
-#        cp -R /Volumes/MATLAB_Runtime_R2020a_Update_2_maci64 .
-#        hdiutil unmount /Volumes/MATLAB_Runtime_R2020a_Update_2_maci64
-#        sudo ./MATLAB_Runtime_R2020a_Update_2_maci64/InstallForMacOSX.app/Contents/MacOS/InstallForMacOSX -mode silent -agreeToLicense yes
-#        MATLAB_RUNTIME_PATH=/Applications/MATLAB/MATLAB_Runtime/v98
-#        echo "MATLAB_RUNTIME_PATH=$MATLAB_RUNTIME_PATH" >> $GITHUB_ENV
-#        echo "DYLD_LIBRARY_PATH=$MATLAB_RUNTIME_PATH/runtime/maci64:$MATLAB_RUNTIME_PATH/sys/os/maci64:$MATLAB_RUNTIME_PATH/bin/maci64" >> $GITHUB_ENV
-#        echo "$MATLAB_RUNTIME_PATH/bin/maci64" >> $GITHUB_PATH
     - name: Set up MATLAB
       id: setup-matlab
       uses: matlab-actions/setup-matlab@v2
       with:
         release: R2023a
         products: MATLAB_Compiler
+        cache: true
     - name: Download SINGE
       run: |
         wget --quiet https://github.com/gitter-lab/SINGE/releases/download/$SINGE_VERSION/SINGE_mac.tgz
