--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -55,7 +55,7 @@ jobs:
   macos:
     name: Install test macOS
     # See available macOS software https://github.com/actions/virtual-environments/blob/master/images/macos/macos-10.15-Readme.md
-    runs-on: macos-latest
+    runs-on: macos-12
     env:
       SINGE_VERSION: v0.5.1
     steps:
