--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -17,19 +17,19 @@ jobs:
       run: docker pull agitter/singe:tmp
 #    Docker image build fails
 #    The repository 'http://deb.debian.org/debian stretch Release' does no longer have a Release file.
-#    - name: Build Docker image
-#      uses: docker/build-push-action@v1
-#      with:
-#        username: ${{ secrets.DOCKER_USERNAME }}
-#        password: ${{ secrets.DOCKER_PASSWORD }}
-#        path: .
-#        dockerfile: docker/Dockerfile
-#        repository: agitter/singe
-#        tags: tmp
-#        cache_froms: agitter/singe:tmp
-#        add_git_labels: true
-#        # Only push when running on the master branch
-#        push: ${{ github.ref == 'refs/heads/master' }}
+    - name: Build Docker image
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        path: .
+        dockerfile: docker/Dockerfile
+        repository: agitter/singe
+        tags: tmp
+        cache_froms: agitter/singe:tmp
+        add_git_labels: true
+        # Only push when running on the master branch
+        push: ${{ github.ref == 'refs/heads/master' }}
     - name: Test SINGE
       run: |
         # Store the md5sums of the tracked source files before running tests in the Docker image
