Update apt sources in Dockerfile Per https://github.com/Murali-group/Beeline/commit/e38d7d8a2a51a852981d491bd01dc98b08ce3edc

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 # MATLAB R2018a in a Debian environment
 FROM amarburg/matlab-runtime:R2018a
 
+RUN echo "deb http://archive.debian.org/debian stretch main contrib non-free" > /etc/apt/sources.list
 RUN apt-get update && \
     apt-get -y install libxt6 bzip2 && \
     rm -rf /var/lib/apt/lists/*
