--- a/tests/environment.yml
+++ b/tests/environment.yml
@@ -1,7 +1,9 @@
 name: singe-test
 dependencies:
+  - h5py=2.10.0
   - numpy=1.16.3
-  - pip=19.1
+  - pip=19.1.1
+  - python=3.7.11
   - scipy=1.2.1
   - pip:
     - csvdiff==0.3.3
